--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,11 +2,9 @@
 $font-principal: 'Noto Sans JP', sans-serif;
 $font-text: 'Roboto', sans-serif;
 
-$size-titles: 3rem;
-$size-text: 1rem;
-$size-standar: 0.75rem;
-
 /* COLORS */
 $color-one: rgb(255, 255, 255);
-$color-two: rgb(2, 2, 2);
-$special-color: rgb(242, 199, 199);
+$color-two: rgb(0, 0, 0);
+$color-three: rgb(241, 239, 239);
+$special-color: rgb(229, 204, 204);
+
