--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,11 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+
 @import "variables";
 @import "nav";
+@import "cardlinks";
+@import "card";
+@import "footer";
