--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -4,11 +4,14 @@
 }
 
 .navtwo{
-    height: 40px;
+    height: 50px;
     background-color: $color-two;
+
     &_link{
         font-family: $font-text;
         color: $color-one;
+        margin-bottom: 10px;
+        text-align: center;
         &:hover{
             color: $special-color;
             }
@@ -17,9 +20,6 @@
             margin-left: 15px;
         }
     }
-    &_list{
-        align-self: center;
-    } 
 }
 
 .nav_icon{
@@ -37,4 +37,8 @@
     width: 500px;
     background-color: rgb(241, 239, 239);
     border-radius: 20px;
+}
+
+.carrousel{
+    margin-top: 3px;
 }
